Fixes navbar overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ p {
 /* Navbar */
 .navbar {
   background-color: var(--navbar-color) !important;
+  z-index: 999 !important;
 }
 
 .navbar-collapse {
